# parental-controls

./: .gitignore  README.md  default.nix  flake.nix  pyproject.toml  update_translations.sh
big-age-signal/: Cargo.toml
big-age-signal/src/: main.rs
big-parental-controls/locale/: bg.po  cs.po  da.po  de.po  el.po  es.po  et.po  fi.po  fr.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
big-parental-controls/usr/lib/big-parental-controls/: acl-reapply  group-helper  pam-time-message  time-check
big-parental-controls/usr/lib/systemd/system/: big-parental-daemon.service
big-parental-controls/usr/lib/systemd/user/: big-age-signal.service
big-parental-controls/usr/share/applications/: big-parental-controls.desktop
big-parental-controls/usr/share/dbus-1/interfaces/: br.com.biglinux.AgeSignal.xml
big-parental-controls/usr/share/dbus-1/services/: br.com.biglinux.AgeSignal.service
big-parental-controls/usr/share/dbus-1/system.d/: br.com.biglinux.ParentalDaemon.conf
big-parental-controls/usr/share/libalpm/hooks/: big-parental-controls-acl.hook
debian/: changelog  control  install  postinst  prerm  rules  service
pkgbuild/: PKGBUILD  big-parental-controls.install
src/big_parental_controls/: __init__.py  __main__.py  app.py  window.py
src/big_parental_controls/core/: constants.py  types.py
src/big_parental_controls/daemon_client/: client.py
src/big_parental_controls/data/: style.css  window.ui
src/big_parental_controls/services/: accounts_service.py  acl_service.py  activity_service.py  desktop_hide_service.py  dns_service.py  malcontent_service.py  polkit_service.py  time_service.py
src/big_parental_controls/ui/: compliance.py
src/big_parental_controls/ui/pages/: activity_page.py  app_filter_page.py  dns_page.py  main_view.py  supervised_view.py  support_page.py  time_limits_page.py  user_detail_page.py  users_page.py  welcome_page.py
src/big_parental_controls/ui/widgets/: activity_block.py  usage_chart.py
src/big_parental_controls/utils/: async_runner.py  i18n.py
tests/: test_activity_service.py  test_age_signal.py  test_compliance.py  test_daemon_client.py  test_dns_service.py  test_i18n.py  test_package_structure.py  test_polkit_service.py  test_resilience.py  test_user_creation.py
(+29 files in other folders)
