[package]
name = "big-parental-daemon"
version = "1.0.0"
edition = "2021"
description = "Unified D-Bus system daemon: age signal + parental monitoring"
license = "GPL-3.0-or-later"

[[bin]]
name = "big-parental-daemon"
path = "src/main.rs"

[dependencies]
zbus = { version = "5.14", default-features = false, features = ["tokio"] }
tokio = { version = "1.50", features = ["rt", "macros", "time", "sync"] }
nix = { version = "0.31", default-features = false, features = ["user", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
